--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -9,12 +9,11 @@
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:smallScreens="false"/>
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/restaurant_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
