--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -3,6 +3,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
@@ -21,6 +24,7 @@
         </activity>
         <activity android:name=".DetailForm"></activity>
         <activity android:name=".EditPreferences"></activity>
+        <activity android:name=".FeedActivity"></activity>
     </application>
 
 </manifest>
