--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:icon="@drawable/restaurant_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library
+            android:name="com.google.android.maps"
+            android:required="true" />
         <activity
             android:name=".LunchList" >
             <intent-filter>
@@ -26,6 +29,7 @@
         <activity android:name=".DetailForm"></activity>
         <activity android:name=".EditPreferences"></activity>
         <activity android:name=".FeedActivity"></activity>
+        <activity android:name=".RestaurantMap"></activity>
         
         <service android:name=".FeedService"></service>
     </application>
