created 'alarm' that goes off when it is time for lunch

--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".EditPreferences"></activity>
         <activity android:name=".FeedActivity"></activity>
         <activity android:name=".RestaurantMap"></activity>
+        <activity android:name=".AlarmActivity"></activity>
         
         <service android:name=".FeedService"></service>
         
@@ -39,6 +40,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".OnAlarmReceiver"></receiver>
     </application>
 
 </manifest>
