--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".AlarmActivity"></activity>
         
         <service android:name=".FeedService"></service>
+        <service android:name=".WidgetService"></service>
         
         <receiver 
             android:name=".OnBootReceiver" 
