--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="15" />
     <supports-screens
         android:largeScreens="true" 
@@ -36,8 +36,14 @@
         <activity android:name=".RestaurantMap"></activity>
         <activity android:name=".AlarmActivity"></activity>
         
-        <service android:name=".FeedService"></service>
-        <service android:name=".WidgetService"></service>
+        <service 
+            android:name=".FeedService"></service>
+        <service 
+            android:name=".WidgetService"></service>
+        <service 
+            android:name=".ListWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS">
+        </service>
         
         <receiver 
             android:name=".OnBootReceiver" 
